# spektra-vision

./: .gitignore  LICENSE  README.md  docker-compose.yml  nginx.conf
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260208_add_created_at.py  20260208_add_history.py  20260208_add_is_prediction.py  20260208_add_review.py  20260208_add_users.py  20260208_add_versions.py  20260208_dataset_mgmt.py  20260208_expand_jobs.py  20260208_initial.py  20260209_add_celery_task_id.py  20260210_add_annotation_jobs.py  20260210_add_job_logs.py  20260210_add_tags.py  20260210_cascade_deletes.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: annotation_jobs.py  auth.py  dataset_versions.py  (+9 more)
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  annotation.py  annotation_history.py  annotation_job.py  dataset_version.py  enums.py  image.py  job.py  label.py  project.py  tag.py  user.py
backend/app/schemas/: __init__.py  annotation_jobs.py  annotations.py  auth.py  dataset_versions.py  images.py  jobs.py  labels.py  projects.py  tags.py
backend/app/services/: auth.py  exif.py  gpu_estimator.py  presign.py  redis.py  storage.py
backend/scripts/: ingest_local_dataset.py  seed_vehicles_sample_data.py
worker/: .env.example  Dockerfile  app.py  pyproject.toml  requirements.txt
worker/tasks/: predict.py  train.py
worker/utils/: db.py  db_queries.py  redis_log.py  settings.py  storage.py  yolo_export.py  yolo_infer.py
(+44 files in other folders)
