[project]
name = "spektra-backend"
version = "0.1.0"
description = "Spektra backend"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "SQLAlchemy>=2.0.28",
  "asyncpg>=0.29.0",
  "alembic>=1.13.0",
  "redis>=5.0.0",
  "boto3>=1.34.0",
  "pillow>=10.2.0",
  "python-multipart>=0.0.9",
]

[tool.ruff]
line-length = 100
